--- a/Customer_prediction.ipynb
+++ b/Customer_prediction.ipynb
@@ -3630,7 +3630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cluster 3 is the one counting the most customers, however, it is also the one counting the less sales !\n",
+    "#Cluster 3 is the one counting the most customers, however, it is also the one counting the less spending power !\n",
     "#Wich is kind of obvious because the vast majority of people coming to the stores are looking for the essentials only."
    ]
   },
